<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        app:srcCompat="@drawable/login_pic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/usr_ID" />

        <EditText
            android:id="@+id/usr_id"
            android:autofillHints=""
            android:inputType="text"
            android:layout_height="40dp"
            android:layout_width="180dp"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/usr_pwd" />

        <EditText
            android:id="@+id/usr_pwd"
            android:autofillHints=""
            android:inputType="textPassword"
            tools:ignore="LabelFor"
            android:layout_height="40dp"
            android:layout_width="180dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_login"
        android:ems="10"
        android:layout_gravity="center"
        android:text="@string/btn_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        style="@android:style/Widget.Material.Button"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd"
            style="@android:style/Widget.Material.Button"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@android:style/Widget.Material.Button"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</LinearLayout>